// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Axentix/Components/Button Circle 1`] = `
<button
  class="btn circle primary rounded-1"
  classes="primary rounded-1"
  content="I"
>
  <span>
    I
  </span>
</button>
`;

exports[`Storyshots Axentix/Components/Button Disabled 1`] = `
<button
  class="btn disabled primary rounded-1"
  classes="primary rounded-1"
  content="Button"
>
  <span>
    Button
  </span>
</button>
`;

exports[`Storyshots Axentix/Components/Button Large 1`] = `
<button
  class="btn large primary rounded-1"
  classes="primary rounded-1"
  content="Button"
>
  <span>
    Button
  </span>
</button>
`;

exports[`Storyshots Axentix/Components/Button Normal 1`] = `
<button
  class="btn primary rounded-1"
  classes="primary rounded-1"
  content="Button"
>
  <span>
    Button
  </span>
</button>
`;

exports[`Storyshots Axentix/Components/Button Outline 1`] = `
<button
  class="btn outline txt-airforce rounded-1"
  classes="txt-airforce rounded-1"
  content="Button"
>
  <span
    class="outline-text"
  >
    <span>
      Button
    </span>
  </span>
</button>
`;

exports[`Storyshots Axentix/Components/Button Outline Invert 1`] = `
<button
  class="btn outline txt-blue txt-light-3 rounded-1"
  classes="txt-blue txt-light-3 rounded-1"
  content="Button"
>
  <span
    class="outline-text outline-invert"
  >
    <span>
      Button
    </span>
  </span>
</button>
`;

exports[`Storyshots Axentix/Components/Button Outline Opening 1`] = `
<button
  class="btn outline opening txt-airforce rounded-1"
  classes="txt-airforce rounded-1"
  content="Button"
>
  <span
    class="outline-text"
  >
    <span>
      Button
    </span>
  </span>
</button>
`;

exports[`Storyshots Axentix/Components/Button Press 1`] = `
<button
  class="btn press primary rounded-1"
  classes="primary rounded-1"
  content="Button"
>
  <span>
    Button
  </span>
</button>
`;

exports[`Storyshots Axentix/Components/Button Small 1`] = `
<button
  class="btn small primary rounded-1"
  classes="primary rounded-1"
  content="Button"
>
  <span>
    Button
  </span>
</button>
`;

exports[`Storyshots Axentix/Components/Forms/Checkbox & Radio Checkbox 1`] = `
<form
  class=""
>
  <div
    class="form-field"
    style="--form-material-color: #4c9f85;"
  >
    <!---->
     
    <label
      class="form-check"
    >
      <input
        classes=""
        content="Ok"
        type="checkbox"
        value=""
      />
       
      <span
        class=""
      >
        <span>
          Ok
        </span>
      </span>
    </label>
     
    <!---->
  </div>
</form>
`;

exports[`Storyshots Axentix/Components/Forms/Checkbox & Radio Full Material Radio 1`] = `
<form
  class="form-material"
>
  <div
    class="form-field"
    style="--form-material-color: #4c9f85;"
  >
    <!---->
     
    <label
      class="form-check"
    >
      <input
        classes=""
        content="Ok"
        material="true"
        type="radio"
        value="1"
      />
       
      <span
        class="full"
      >
        1
      </span>
    </label>
     
    <label
      class="form-check"
    >
      <input
        classes=""
        content="Ok"
        material="true"
        type="radio"
        value="2"
      />
       
      <span
        class="full"
      >
        2
      </span>
    </label>
     
    <label
      class="form-check"
    >
      <input
        classes=""
        content="Ok"
        material="true"
        type="radio"
        value="3"
      />
       
      <span
        class="full"
      >
        3
      </span>
    </label>
     
    <!---->
  </div>
</form>
`;

exports[`Storyshots Axentix/Components/Forms/Checkbox & Radio Material Checkbox 1`] = `
<form
  class="form-material"
>
  <div
    class="form-field"
    style="--form-material-color: #4c9f85;"
  >
    <!---->
     
    <label
      class="form-check"
    >
      <input
        classes=""
        content="Ok"
        material="true"
        type="checkbox"
        value=""
      />
       
      <span
        class=""
      >
        <span>
          Ok
        </span>
      </span>
    </label>
     
    <!---->
  </div>
</form>
`;

exports[`Storyshots Axentix/Components/Forms/Checkbox & Radio Material Radio 1`] = `
<form
  class="form-material"
>
  <div
    class="form-field"
    style="--form-material-color: #4c9f85;"
  >
    <!---->
     
    <label
      class="form-check"
    >
      <input
        classes=""
        content="Ok"
        material="true"
        type="radio"
        value="1"
      />
       
      <span
        class=""
      >
        1
      </span>
    </label>
     
    <label
      class="form-check"
    >
      <input
        classes=""
        content="Ok"
        material="true"
        type="radio"
        value="2"
      />
       
      <span
        class=""
      >
        2
      </span>
    </label>
     
    <label
      class="form-check"
    >
      <input
        classes=""
        content="Ok"
        material="true"
        type="radio"
        value="3"
      />
       
      <span
        class=""
      >
        3
      </span>
    </label>
     
    <!---->
  </div>
</form>
`;

exports[`Storyshots Axentix/Components/Forms/Checkbox & Radio Radio 1`] = `
<form
  class=""
>
  <div
    class="form-field"
    style="--form-material-color: #4c9f85;"
  >
    <!---->
     
    <label
      class="form-check"
    >
      <input
        classes=""
        content="Ok"
        type="radio"
        value="1"
      />
       
      <span
        class=""
      >
        1
      </span>
    </label>
     
    <label
      class="form-check"
    >
      <input
        classes=""
        content="Ok"
        type="radio"
        value="2"
      />
       
      <span
        class=""
      >
        2
      </span>
    </label>
     
    <label
      class="form-check"
    >
      <input
        classes=""
        content="Ok"
        type="radio"
        value="3"
      />
       
      <span
        class=""
      >
        3
      </span>
    </label>
     
    <!---->
  </div>
</form>
`;

exports[`Storyshots Axentix/Components/Forms/File Multiple 1`] = `
<form
  class=""
>
  <div
    class="form-file"
  >
    <label
      class="btn airforce dark-1 rounded-1 shadow-1"
      for="input"
    >
      Upload
    </label>
     
    <input
      classes=""
      id="input"
      multiple="multiple"
      type="file"
    />
     
    <div
      class="form-file-path"
    />
  </div>
</form>
`;

exports[`Storyshots Axentix/Components/Forms/File Normal 1`] = `
<form
  class=""
>
  <div
    class="form-file"
  >
    <label
      class="btn airforce dark-1 rounded-1 shadow-1"
      for="input"
    >
      Upload
    </label>
     
    <input
      classes=""
      id="input"
      type="file"
    />
     
    <div
      class="form-file-path"
    />
  </div>
</form>
`;

exports[`Storyshots Axentix/Components/Forms/Group (Suffix & Prefix) Both 1`] = `
<form
  class=""
>
  <div
    class="form-field"
    style="--form-material-color: #4c9f85;"
  >
    <!---->
     
    <div
      class="form-group rounded-1"
      classes="rounded-1"
    >
      <span
        class="form-group-txt bd-1 bd-solid bd-r-0 bd-grey bd-light-1"
      >
        @
      </span>
       
      <input
        class="form-control"
        type="text"
      />
       
      <span
        class="form-group-txt bd-1 bd-solid bd-l-0 bd-grey bd-light-1 grey light-3"
      >
        useaxentix.com
      </span>
    </div>
     
    <!---->
  </div>
</form>
`;

exports[`Storyshots Axentix/Components/Forms/Group (Suffix & Prefix) Prefix 1`] = `
<form
  class=""
>
  <div
    class="form-field"
    style="--form-material-color: #4c9f85;"
  >
    <!---->
     
    <div
      class="form-group"
      classes=""
    >
      <span
        class="form-group-txt"
      >
        @
      </span>
       
      <input
        class="form-control"
        type="text"
      />
    </div>
     
    <!---->
  </div>
</form>
`;

exports[`Storyshots Axentix/Components/Forms/Group (Suffix & Prefix) Suffix 1`] = `
<form
  class=""
>
  <div
    class="form-field"
    style="--form-material-color: #4c9f85;"
  >
    <!---->
     
    <div
      class="form-group"
      classes=""
    >
      <input
        class="form-control"
        type="text"
      />
       
      <span
        class="form-group-txt"
      >
        @
      </span>
    </div>
     
    <!---->
  </div>
</form>
`;

exports[`Storyshots Axentix/Components/Forms/Inputs Basic 1`] = `
<form
  class=""
>
  <div
    class="form-field"
    controlclasses=""
    fieldclasses=""
    placeholder=""
    style="--form-material-color: #4c9f85;"
    tag="input"
    type="text"
  >
    <label>
      Text input
    </label>
     
    <input
      class="form-control"
      placeholder=""
      type="text"
    />
     
    <!---->
  </div>
</form>
`;

exports[`Storyshots Axentix/Components/Forms/Inputs Basic Material 1`] = `
<form
  class="form-material"
>
  <div
    class="form-field"
    controlclasses=""
    fieldclasses=""
    material="true"
    placeholder=""
    style="--form-material-color: #4c9f85; --form-material-position: 0px; --form-material-left-offset: 0px; --form-material-width: 100%;"
    tag="input"
    type="text"
  >
    <label
      style="left: 0px;"
    >
      Text input
    </label>
     
    <input
      class="form-control"
      placeholder=""
      type="text"
    />
     
    <!---->
  </div>
</form>
`;

exports[`Storyshots Axentix/Components/Forms/Inputs Disabled 1`] = `
<form
  class=""
>
  <div
    class="form-field"
    controlclasses=""
    disabled="disabled"
    fieldclasses=""
    placeholder=""
    style="--form-material-color: #4c9f85;"
    tag="input"
    type="text"
  >
    <label>
      Text input
    </label>
     
    <input
      class="form-control"
      disabled="disabled"
      placeholder=""
      type="text"
    />
     
    <!---->
  </div>
</form>
`;

exports[`Storyshots Axentix/Components/Forms/Inputs Disabled Material 1`] = `
<form
  class="form-material"
>
  <div
    class="form-field"
    controlclasses=""
    disabled="disabled"
    fieldclasses=""
    material="true"
    placeholder=""
    style="--form-material-color: #4c9f85;"
    tag="input"
    type="text"
  >
    <label>
      Text input
    </label>
     
    <input
      class="form-control"
      disabled="disabled"
      placeholder=""
      type="text"
    />
     
    <!---->
  </div>
</form>
`;

exports[`Storyshots Axentix/Components/Forms/Inputs Helper 1`] = `
<form
  class=""
>
  <div
    class="form-field"
    controlclasses=""
    fieldclasses=""
    placeholder=""
    style="--form-material-color: #4c9f85;"
    tag="input"
    type="text"
  >
    <label>
      Text input
    </label>
     
    <input
      class="form-control"
      placeholder=""
      type="text"
    />
     
    <span
      class="form-helper"
    >
      This is a helper text.
    </span>
  </div>
</form>
`;

exports[`Storyshots Axentix/Components/Forms/Inputs Helper Custom 1`] = `
<form
  class=""
>
  <div
    class="form-field"
    controlclasses=""
    fieldclasses=""
    placeholder=""
    style="--form-material-color: #4c9f85;"
    tag="input"
    type="text"
  >
    <label>
      Text input
    </label>
     
    <input
      class="form-control"
      placeholder=""
      type="text"
    />
     
    <span
      class="form-helper txt-red txt-center"
    >
      Error message.
    </span>
  </div>
</form>
`;

exports[`Storyshots Axentix/Components/Forms/Inputs Inline 1`] = `
<form
  class=""
>
  <div
    class="form-field inline"
    controlclasses=""
    fieldclasses=""
    placeholder=""
    style="--form-material-color: #4c9f85;"
    tag="input"
    type="text"
  >
    <label>
      Text input
    </label>
     
    <input
      class="form-control"
      placeholder=""
      type="text"
    />
     
    <!---->
  </div>
</form>
`;

exports[`Storyshots Axentix/Components/Forms/Inputs Multiple Select 1`] = `
<form
  class=""
>
  <div
    class="form-field"
    controlclasses=""
    fieldclasses=""
    multiple="multiple"
    placeholder=""
    style="--form-material-color: #4c9f85;"
    tag="select"
    type=""
  >
    <label>
      Select
    </label>
     
    <select
      class="form-control"
      multiple="multiple"
    >
      <option>
        Option 1
      </option>
       
      <option>
        Option 2
      </option>
       
      <option>
        Option 3
      </option>
    </select>
     
    <!---->
  </div>
</form>
`;

exports[`Storyshots Axentix/Components/Forms/Inputs Placeholder 1`] = `
<form
  class=""
>
  <div
    class="form-field"
    controlclasses=""
    fieldclasses=""
    placeholder="Axentix <3"
    style="--form-material-color: #4c9f85;"
    tag="input"
    type="text"
  >
    <label>
      Text input
    </label>
     
    <input
      class="form-control"
      placeholder="Axentix <3"
      type="text"
    />
     
    <!---->
  </div>
</form>
`;

exports[`Storyshots Axentix/Components/Forms/Inputs Placeholder Material 1`] = `
<form
  class="form-material"
>
  <div
    class="form-field active"
    controlclasses=""
    fieldclasses=""
    material="true"
    placeholder="Axentix <3"
    style="--form-material-color: #4c9f85; --form-material-position: 0px; --form-material-left-offset: 0px; --form-material-width: 100%;"
    tag="input"
    type="text"
  >
    <label
      style="left: 0px;"
    >
      Text input
    </label>
     
    <input
      class="form-control"
      placeholder="Axentix <3"
      type="text"
    />
     
    <!---->
  </div>
</form>
`;

exports[`Storyshots Axentix/Components/Forms/Inputs Readonly 1`] = `
<form
  class=""
>
  <div
    class="form-field"
    controlclasses=""
    fieldclasses=""
    placeholder=""
    readonly="readonly"
    style="--form-material-color: #4c9f85;"
    tag="input"
    type="text"
  >
    <label>
      Text input
    </label>
     
    <input
      class="form-control"
      placeholder=""
      readonly="readonly"
      type="text"
    />
     
    <!---->
  </div>
</form>
`;

exports[`Storyshots Axentix/Components/Forms/Inputs Readonly Material 1`] = `
<form
  class="form-material"
>
  <div
    class="form-field"
    controlclasses=""
    fieldclasses=""
    material="true"
    placeholder=""
    readonly="readonly"
    style="--form-material-color: #4c9f85;"
    tag="input"
    type="text"
  >
    <label>
      Text input
    </label>
     
    <input
      class="form-control"
      placeholder=""
      readonly="readonly"
      type="text"
    />
     
    <!---->
  </div>
</form>
`;

exports[`Storyshots Axentix/Components/Forms/Inputs Select 1`] = `
<form
  class=""
>
  <div
    class="form-field"
    controlclasses=""
    fieldclasses=""
    placeholder=""
    style="--form-material-color: #4c9f85;"
    tag="select"
    type=""
  >
    <label>
      Select
    </label>
     
    <select
      class="form-control"
    >
      <option>
        Option 1
      </option>
       
      <option>
        Option 2
      </option>
       
      <option>
        Option 3
      </option>
    </select>
     
    <!---->
  </div>
</form>
`;

exports[`Storyshots Axentix/Components/Forms/Inputs Select Material 1`] = `
<form
  class="form-material"
>
  <div
    class="form-field active"
    controlclasses=""
    fieldclasses=""
    material="true"
    placeholder=""
    style="--form-material-color: #4c9f85; --form-material-position: 0px; --form-material-left-offset: 0px; --form-material-width: 100%;"
    tag="select"
    type=""
  >
    <label
      style="left: 0px;"
    >
      Select
    </label>
     
    <select
      class="form-control"
    >
      <option>
        Option 1
      </option>
       
      <option>
        Option 2
      </option>
       
      <option>
        Option 3
      </option>
    </select>
     
    <!---->
  </div>
</form>
`;

exports[`Storyshots Axentix/Components/Forms/Inputs Textarea 1`] = `
<form
  class=""
>
  <div
    class="form-field"
    controlclasses=""
    fieldclasses=""
    placeholder=""
    style="--form-material-color: #4c9f85;"
    tag="textarea"
    type="text"
  >
    <label>
      Text input
    </label>
     
    <textarea
      class="form-control"
      placeholder=""
      type="text"
    />
     
    <!---->
  </div>
</form>
`;

exports[`Storyshots Axentix/Components/Forms/Inputs Textarea Material 1`] = `
<form
  class="form-material"
>
  <div
    class="form-field"
    controlclasses=""
    fieldclasses=""
    material="true"
    placeholder=""
    style="--form-material-color: #4c9f85;"
    tag="textarea"
    type="text"
  >
    <label>
      Text input
    </label>
     
    <textarea
      class="form-control"
      placeholder=""
      type="text"
    />
     
    <!---->
  </div>
</form>
`;

exports[`Storyshots Axentix/Components/Forms/Switch Custom Color 1`] = `
<form
  class=""
>
  <div
    class="form-field form-default"
    style="--form-material-color: #4c9f85;"
  >
    <!---->
     
    <label
      class="form-switch"
    >
      <span />
       
      <input
        classes=""
        content="On"
        falsevalue=""
        type="checkbox"
      />
       
      <span
        class="slider"
        style="--form-switch-active-color: #000000;"
      />
        
      <span>
        On
      </span>
    </label>
     
    <!---->
  </div>
</form>
`;

exports[`Storyshots Axentix/Components/Forms/Switch Large 1`] = `
<form
  class=""
>
  <div
    class="form-field form-default"
    style="--form-material-color: #4c9f85;"
  >
    <!---->
     
    <label
      class="form-switch"
    >
      <span />
       
      <input
        classes=""
        content="On"
        falsevalue=""
        type="checkbox"
      />
       
      <span
        class="slider large"
        style="--form-switch-active-color: #4c9f85;"
      />
        
      <span>
        On
      </span>
    </label>
     
    <!---->
  </div>
</form>
`;

exports[`Storyshots Axentix/Components/Forms/Switch Normal 1`] = `
<form
  class=""
>
  <div
    class="form-field form-default"
    style="--form-material-color: #4c9f85;"
  >
    <!---->
     
    <label
      class="form-switch"
    >
      <span />
       
      <input
        classes=""
        content="On"
        falsevalue=""
        type="checkbox"
      />
       
      <span
        class="slider"
        style="--form-switch-active-color: #4c9f85;"
      />
        
      <span>
        On
      </span>
    </label>
     
    <!---->
  </div>
</form>
`;

exports[`Storyshots Axentix/Components/Forms/Switch Small 1`] = `
<form
  class=""
>
  <div
    class="form-field form-default"
    style="--form-material-color: #4c9f85;"
  >
    <!---->
     
    <label
      class="form-switch"
    >
      <span />
       
      <input
        classes=""
        content="On"
        falsevalue=""
        type="checkbox"
      />
       
      <span
        class="slider small"
        style="--form-switch-active-color: #4c9f85;"
      />
        
      <span>
        On
      </span>
    </label>
     
    <!---->
  </div>
</form>
`;

exports[`Storyshots Axentix/Components/Modal Bouncing 1`] = `
<div
  class="modal bouncing white rounded-1"
  classes="white rounded-1"
  content="Lorem ipsum dolor, sit amet consectetur adipisicing elit. Minus voluptas ipsam rerum repellendus,
      quibusdam architecto laboriosam quia itaque voluptates et, fuga tenetur possimus debitis quisquam
      assumenda fugit modi magnam earum."
  footer=""
  header=""
  style="transition-duration: 400ms; animation-duration: 400ms; z-index: 810;"
>
  <!---->
   
  <div
    class="modal-content"
  >
     
    <span>
      Lorem ipsum dolor, sit amet consectetur adipisicing elit. Minus voluptas ipsam rerum repellendus,
      quibusdam architecto laboriosam quia itaque voluptates et, fuga tenetur possimus debitis quisquam
      assumenda fugit modi magnam earum.
    </span>
  </div>
   
  <!---->
</div>
`;

exports[`Storyshots Axentix/Components/Modal Falling 1`] = `
<div
  class="modal falling white rounded-1"
  classes="white rounded-1"
  content="Lorem ipsum dolor, sit amet consectetur adipisicing elit. Minus voluptas ipsam rerum repellendus,
      quibusdam architecto laboriosam quia itaque voluptates et, fuga tenetur possimus debitis quisquam
      assumenda fugit modi magnam earum."
  footer=""
  header=""
  style="transition-duration: 400ms; animation-duration: 400ms; z-index: 810;"
>
  <!---->
   
  <div
    class="modal-content"
  >
     
    <span>
      Lorem ipsum dolor, sit amet consectetur adipisicing elit. Minus voluptas ipsam rerum repellendus,
      quibusdam architecto laboriosam quia itaque voluptates et, fuga tenetur possimus debitis quisquam
      assumenda fugit modi magnam earum.
    </span>
  </div>
   
  <!---->
</div>
`;

exports[`Storyshots Axentix/Components/Modal Footer 1`] = `
<div
  class="modal white rounded-1"
  classes="white rounded-1"
  content="Lorem ipsum dolor, sit amet consectetur adipisicing elit. Minus voluptas ipsam rerum repellendus,
      quibusdam architecto laboriosam quia itaque voluptates et, fuga tenetur possimus debitis quisquam
      assumenda fugit modi magnam earum."
  footer="Footer content"
  header=""
  style="transition-duration: 400ms; animation-duration: 400ms; z-index: 810;"
>
  <!---->
   
  <div
    class="modal-content"
  >
     
    <span>
      Lorem ipsum dolor, sit amet consectetur adipisicing elit. Minus voluptas ipsam rerum repellendus,
      quibusdam architecto laboriosam quia itaque voluptates et, fuga tenetur possimus debitis quisquam
      assumenda fugit modi magnam earum.
    </span>
  </div>
   
  <div
    class="modal-footer"
  >
    <span>
      Footer content
    </span>
  </div>
</div>
`;

exports[`Storyshots Axentix/Components/Modal Header 1`] = `
<div
  class="modal white rounded-1"
  classes="white rounded-1"
  content="Lorem ipsum dolor, sit amet consectetur adipisicing elit. Minus voluptas ipsam rerum repellendus,
      quibusdam architecto laboriosam quia itaque voluptates et, fuga tenetur possimus debitis quisquam
      assumenda fugit modi magnam earum."
  footer=""
  header="Header title"
  style="transition-duration: 400ms; animation-duration: 400ms; z-index: 810;"
>
  <div
    class="modal-header"
  >
    <span>
      Header title
    </span>
  </div>
   
  <div
    class="modal-content"
  >
     
    <span>
      Lorem ipsum dolor, sit amet consectetur adipisicing elit. Minus voluptas ipsam rerum repellendus,
      quibusdam architecto laboriosam quia itaque voluptates et, fuga tenetur possimus debitis quisquam
      assumenda fugit modi magnam earum.
    </span>
  </div>
   
  <!---->
</div>
`;

exports[`Storyshots Axentix/Components/Modal Normal 1`] = `
<div
  class="modal white rounded-1"
  classes="white rounded-1"
  content="Lorem ipsum dolor, sit amet consectetur adipisicing elit. Minus voluptas ipsam rerum repellendus,
      quibusdam architecto laboriosam quia itaque voluptates et, fuga tenetur possimus debitis quisquam
      assumenda fugit modi magnam earum."
  footer=""
  header=""
  style="transition-duration: 400ms; animation-duration: 400ms; z-index: 810;"
>
  <!---->
   
  <div
    class="modal-content"
  >
     
    <span>
      Lorem ipsum dolor, sit amet consectetur adipisicing elit. Minus voluptas ipsam rerum repellendus,
      quibusdam architecto laboriosam quia itaque voluptates et, fuga tenetur possimus debitis quisquam
      assumenda fugit modi magnam earum.
    </span>
  </div>
   
  <!---->
</div>
`;

exports[`Storyshots Axentix/Components/Sidenav Large 1`] = `
<div
  class="sidenav large airforce shadow-1"
  classes="airforce shadow-1"
  footer=""
  header=""
  style="transition-duration: 300ms;"
>
  <!---->
    
  <a
    class="sidenav-link"
  >
    Link 1
  </a>
   
  <a
    class="sidenav-link active"
  >
    Link 2
  </a>
   
  <a
    class="sidenav-link"
  >
    Link 3
  </a>
   
  <!---->
</div>
`;

exports[`Storyshots Axentix/Components/Sidenav Normal 1`] = `
<div
  class="sidenav airforce shadow-1"
  classes="airforce shadow-1"
  footer=""
  header=""
  style="transition-duration: 300ms;"
>
  <!---->
    
  <a
    class="sidenav-link"
  >
    Link 1
  </a>
   
  <a
    class="sidenav-link active"
  >
    Link 2
  </a>
   
  <a
    class="sidenav-link"
  >
    Link 3
  </a>
   
  <!---->
</div>
`;

exports[`Storyshots Axentix/Components/Sidenav Right Aligned 1`] = `
<div
  class="sidenav right-aligned airforce shadow-1"
  classes="airforce shadow-1"
  footer=""
  header=""
  style="transition-duration: 300ms;"
>
  <!---->
    
  <a
    class="sidenav-link"
  >
    Link 1
  </a>
   
  <a
    class="sidenav-link active"
  >
    Link 2
  </a>
   
  <a
    class="sidenav-link"
  >
    Link 3
  </a>
   
  <!---->
</div>
`;

exports[`Storyshots Axentix/Components/Tooltip Normal 1`] = `
<div
  class="d-flex fx-center"
>
  <div
    class="tooltiper my-auto"
  >
    <button
      class="btn airforce txt-white rounded-1"
    >
      Tooltiped
    </button>
  </div>
</div>
`;
